# pyairbnk

./: .gitignore  CHANGELOG.md  README.md  agents.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  secret-scan.yml
src/pyairbnk/: __init__.py  ble.py  cloud.py  const.py  exceptions.py  models.py  profiles.py  protocol.py
tests/: __init__.py  common.py  test_ble.py  test_cloud.py  test_protocol.py
