[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pyairbnk"
version = "1.0.0"
description = "Async Airbnk and WeHere cloud plus BLE client library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Moballo, LLC" }]
keywords = ["airbnk", "wehere", "bluetooth", "ble", "home-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.10.0",
  "bleak>=0.22.0",
  "bleak-retry-connector>=4.4.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
]

[project.urls]
Changelog = "https://github.com/Moballo-LLC/pyairbnk/blob/main/CHANGELOG.md"
Homepage = "https://github.com/Moballo-LLC/pyairbnk"
Issues = "https://github.com/Moballo-LLC/pyairbnk/issues"
Repository = "https://github.com/Moballo-LLC/pyairbnk"

[tool.hatch.build.targets.wheel]
packages = ["src/pyairbnk"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true

